# motorcontrol

./: CMakeLists.txt  package.xml
config/: bigbot.yaml  motorcontrolPWMbaselink.yaml  motorcontrolbasefootprint.yaml  motorcontrolbaselink.yaml  motorcontroltestbasefootprint.yaml  motorcontroltestbaselink.yaml
include/motorcontrol/: SlaveParse.h  botconfig.h  motorcontrol.h  sensordata.h  serial.h
launch/: bigbotdescript.launch.py  mapbigbotfiltered.launch  minimalbasefootprint.launch  minimalbaselink.launch  minimalbaselink.launch.py  minimaltestbasefootprint.launch  minimaltestbaselink.launch  minimaltestbaselinkpwm.launch  navigation.launch.py  testargs.launch.py
param/: motorcontrolbaselink.yaml
rviz/: odom.rviz
src/: SlaveParse.cpp  botconfig.cpp  karpodrivesetuo.py  motorcontrol.cpp  motorcontrolextracode  odriveenums.py  odriverun.py  odrivesetup.py  sensordata.cpp  serial.cpp  slaveexchange.txt
